--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -156,9 +156,16 @@
     list-style: none;
     padding: 0;
     margin: 0.5rem 0 0;
-    text-align: left;
+    text-align: center;
 }
 
 .leader-list li {
     font-size: 0.95rem;
+}
+
+.leader-medal {
+    display: inline-block;
+    width: 1.4em;
+    text-align: center;
+    margin-right: 6px;
 }
