--- a/frontend/src/styles/Gallery.css
+++ b/frontend/src/styles/Gallery.css
@@ -35,6 +35,11 @@
     margin-bottom: 2rem;
 }
 
+.gallery-fb p{
+    font-size: 0.9rem;
+    font-weight: bolder;
+}
+
 .event-gallery {
     margin: 0 auto 3rem;
     max-width: 1100px;
