--- a/frontend/src/styles/Shared-Buttons.css
+++ b/frontend/src/styles/Shared-Buttons.css
@@ -11,6 +11,7 @@
     text-decoration: none !important;
     font-weight: 600;
     transition: background-color 0.3s;
+    margin: 0 2rem;
 }
 
 .facebook-button:hover {
