--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -30,12 +30,10 @@
 ========================================================= */
 .home-section {
     padding: 1rem 2rem;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #f0c3a0;
 }
 
-.home-section.standings-preview {
-    border: #f47c2a;;
-}
+
 
 .home-section h2 {
     color: #f47c2a;
